derive/src/tests/snapshots/generic_borrowed_row.snap
---
source: derive/src/tests/cases.rs
---
#[derive(Row)]
struct Sample<'a, T> {
    a: i32,
    b: &'a T,
}

/****** GENERATED ******/
#[automatically_derived]
impl<'a, T> clickhouse::Row for Sample<'a, T> {
    const NAME: &'static str = stringify!(Sample);
    fn column_names() -> impl IntoIterator<Item = &'static str> {
        ["a", "b"]
    }
    fn column_count() -> usize {
        <Self as clickhouse::Row>::column_names().into_iter().count()
    }
    const KIND: clickhouse::_priv::RowKind = clickhouse::_priv::RowKind::Struct;
    type Value<'__v> = Sample<'__v, T>;
}
