derive/src/tests/snapshots/generic_owned_row-2.snap
---
source: derive/src/tests/cases.rs
---
#[derive(Row)]
struct Sample<A, B> {
    a: A,
    b: B,
}

/****** GENERATED ******/
#[automatically_derived]
impl<A, B> clickhouse::Row for Sample<A, B> {
    const NAME: &'static str = stringify!(Sample);
    const COLUMN_NAMES: &'static [&'static str] = &["a", "b"];
    const COLUMN_COUNT: usize = <Self as clickhouse::Row>::COLUMN_NAMES.len();
    const KIND: clickhouse::RowKind = clickhouse::RowKind::Struct;
    type Value<'__v> = Self;
}
