derive/src/tests/snapshots/serde_skip_serializing.snap
---
source: derive/src/tests/cases.rs
---
#[derive(Row)]
struct Sample {
    a: u32,
    #[serde(skip_serializing)]
    b: u32,
}

/****** GENERATED ******/
#[automatically_derived]
impl clickhouse::Row for Sample {
    const NAME: &'static str = stringify!(Sample);
    fn column_names() -> impl IntoIterator<Item = &'static str> {
        ["a"]
    }
    fn column_count() -> usize {
        <Self as clickhouse::Row>::column_names().into_iter().count()
    }
    const KIND: clickhouse::_priv::RowKind = clickhouse::_priv::RowKind::Struct;
    type Value<'__v> = Self;
}
