derive/src/tests/snapshots/simple_owned_row.snap
---
source: derive/src/tests/cases.rs
---
#[derive(Row)]
struct Sample {
    a: i32,
    b: String,
}

/****** GENERATED ******/
#[automatically_derived]
impl clickhouse::Row for Sample {
    const NAME: &'static str = stringify!(Sample);
    fn column_names() -> impl IntoIterator<Item = &'static str> {
        ["a", "b"]
    }
    fn column_count() -> usize {
        <Self as clickhouse::Row>::column_names().into_iter().count()
    }
    const KIND: clickhouse::_priv::RowKind = clickhouse::_priv::RowKind::Struct;
    type Value<'__v> = Self;
}
